# photo-feed-v2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: build-cut-image.yml  build-generate-image.yml  build-web-back.yml  build-web-front.yml  ci-infra.yml  ci-lambdas.yml  ci-web-back.yml  ci-web-front.yml  deploy-host-stage.yml  deploy-infra-base.yml  deploy-infra-dns.yml  deploy-infra-ec2-stage.yml  deploy-infra-ecr.yml  deploy-infra-s3.yml  deploy-lambdas-stage.yml
docs/: architecture.md
docs/api/: ai-flow.md  auth.md  media-flow.md  overview.md
docs/debug/: logs.md  ssm.md  stage-shell.md
docs/deploy/: cd.md  ci.md  dns.md  infra.md  lambda-images.md
docs/develop/: make.md  testing.md  workflow.md
docs/quick-start/: dev.md  stage.md
docs/runbooks/: dns-import-bootstrap.md  ssh-via-ssm.md
infra/cf/base/: dns.yaml  ecr-usw2.yaml  ecr.yaml  iam.yaml  network.yaml  secrets.yaml
infra/cf/ec2/: bootstrap.sh  ec2-stage.yaml
infra/cf/ecr/: ecr-euc1.yaml  ecr-usw2.yaml
infra/cf/lambdas/: euc1.yaml  images.env  usw2.yaml
infra/cf/s3/: s3-euc1.yaml  s3-usw2.yaml
infra/host/: apply.sh  docker-compose.stage.yml  images.env
infra/host/nginx/: photo-feed.conf.template
makefiles/: meta.mk  vars.mk
makefiles/dev/: approve.mk  django.mk  seed.mk  stack.mk  wipe.mk
makefiles/quality/: fmt.mk  lint.mk  test.mk
makefiles/stage/: approve.mk  seed.mk  shell.mk  wipe.mk
