[project]
name = "photo-feed-v2"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
dependencies = []

[tool.uv.workspace]
members = ["packages/api", "packages/cut_image", "packages/generate_image"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
